@@ -3,10 +3,12 @@ package com.itwill.gaebokchi.service;
 import java.io.File;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.itwill.gaebokchi.dto.JoinPostListDto;
 import com.itwill.gaebokchi.dto.MainPostCreateDto;
 import com.itwill.gaebokchi.dto.MainPostListDto;
 import com.itwill.gaebokchi.dto.MainPostPageDto;
@@ -74,7 +76,7 @@ public class MainPostService {
 				String orgMediaType = mediaName.substring(idx); // file 이름에 . 다음 인덱스부터 다음 인덱스 까지(확장자)를 해당 변수애 저장
 				String sMediaName = orgMediaName + uuid + orgMediaType; // 파일 순수 이름 + 랜덤으로 생성된 uuid + 확장자를 합쳐서 한 변수에 저장
 
-				String realPath = "/C:/Users/sunman/Desktop/semi_project_repository/videos"; // 실제 파일이 저장될 경로를 변수에 저장
+				String realPath = "/Users/sunman/Desktop/semi_project_repository/videos"; // 실제 파일이 저장될 경로를 변수에 저장
 
 				File folder = new File(realPath);
 
@@ -154,7 +156,7 @@ public class MainPostService {
 		List<Post> list = postDao.selectReadAllByUserid(userid);
 		return list.stream().map(MainPostListDto::fromEntity).toList();
 	}
-	
+
 	public Post selectPostId(Integer id) {
 		log.debug("selectId()id={}", id);
 		Post post = postDao.selectByPostId(id);
@@ -182,33 +184,28 @@ public class MainPostService {
 	public int getPostLikes(Integer postId) {
 		return postDao.selectLikes(postId);
 	}
-	
+
 	public List<MainPostListDto> searchRead(MainPostSearchDto dto) {
 		log.debug("search({})", dto);
 		List<Post> list = postDao.search(dto);
 		return list.stream().map(MainPostListDto::fromEntity).toList();
 	}
-	
+
 	public List<MainPostListDto> searchReadByUserid(MyPostSearchDto dto) {
 		log.debug("search({})", dto);
 		List<Post> list = postDao.searchMyPost(dto);
 		return list.stream().map(MainPostListDto::fromEntity).toList();
 	}
 
-	// 페이징에 사용 될 메서드
-	public MainPostPageDto getPostPage(int page, int size) {
-		int offset = (page - 1) * size;
-		List<Post> posts = postDao.getPostList(size, offset);
-		int totalPosts = postDao.getTotalCount();
-
-		MainPostPageDto pageDto = new MainPostPageDto();
-		pageDto.setContent(posts.stream().map(MainPostListDto::fromEntity).toList());
-		pageDto.setCurrentPage(page);
-		pageDto.setSize(size);
-		pageDto.setTotalElements(totalPosts);
-		pageDto.setTotalPages((int) Math.ceil((double) totalPosts / size));
-
-		return pageDto;
+	public List<MainPostListDto> getPagedPosts(int page, int pageSize) {
+		int startRow = (page - 1) * pageSize;
+		int endRow = page * pageSize;
+		return postDao.getPostList(startRow, endRow).stream().map(MainPostListDto::fromEntity)
+				.collect(Collectors.toList());
 	}
-	
+
+	public int getTotalPostCount() {
+		return postDao.getTotalCount();
+	}
+
 }
